--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-   
+     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Orbitron:wght@900&family=Work+Sans:wght@100;500;700&display=swap" rel="stylesheet">
     <title>HV JORGE ISAAC VILLA</title>
 </head>
 <body>
     <header class="header">
-     <div class="boxName"><div class="name"></div></div>
+     <div class="boxName"><div class="name"><img src="/img/Grupo 14423.png" alt=""></div></div>
      <div class="boxbutton">
-          <button>Sobre mí</button>
-          <button>Portafolio</button>
-          <button>Experiencia</button>
-          <button class="contacButton">Contáctame</button>
+          <div class="boxButton1">
+               <i>Sobre mí</i>
+               <i>Portafolio</i>
+               <i>Experiencia</i>
+          </div>
+          <div class="boxButoon2">
+               <button class="contacButton">Contáctame</button>
+          </div>
      </div>
     </header>
-    
-    <div id="particles-js">
-     
+    <div id="particles-js"><img src="/img/Grupo 14424@2x.png" alt="" style="height: 100vh; width: 100%;">
           <h1>Hola,</h1>
           <h2>soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
           <button class="ver_portafolio">Ver portfolio</button>
      </div>
-                    <script src="js/particles.min.js"></script>
-                    <script src="js/particlesjs-config.json"></script>
  
 
      <!--
