--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-     <div class="boxName"><div class="name"><img src="/img/Grupo 14423.png" alt=""></div></div>
+     <div class="boxName"><div class="name"><img src="./img/Grupo 14423.png" alt=""></div></div>
      <div class="boxbutton">
           <div class="boxButton1">
                <i>Sobre mí</i>
@@ -25,7 +25,7 @@
           </div>
      </div>
     </header>
-    <div id="particles-js"><img src="/img/Grupo 14424@2x.png" alt="" style="height: 100vh; width: 100%;">
+    <div id="particles-js"><img src="./img/Grupo 14424@2x.png" alt="" style="height: 100vh; width: 100%;">
           <h1>Hola,</h1>
           <h2>soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
           <button class="ver_portafolio">Ver portfolio</button>
