programación al 50%, se ternmino header, y toda la seccion 1 con las particulas jSON

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
                </div>
           </div>
          </header>
-    <div id="particles-js">
+
+
+
+
+
+
+<div style="height: 31.99306759098787vh;width: 100%;background-color: black;"></div>
+<div class="canvas1">
+
+     <div id="particles-js">
                <h1>Hola,</h1>
                <h2>soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
                <button class="ver_portafolio">Ver portfolio</button>
@@ -33,6 +42,7 @@
                     <script src="js/particles.min.js"></script>
                     <script src="js/particlesjs-config.json"></script>
 
+</div>
 
     <div class="section">
      <div>
