en esta rama ya la pagina esta completa, falta configurar la version adaptable a multiples pantallas de PC y configurar el footer

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                     <script src="js/particlesjs-config.json"></script>
 </div>
 
-    <div class="section">
-     <div>
+ <div class="section_inicial">
           <h3 class="sobre_mi">Sobre mí</h3>
           <div class="parrafo">
                <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs.</p>
@@ -67,29 +66,70 @@
           </div>
      </div>
      </div>
-     </div>
-     <div class="photo"></div>  
+     <div class="photo"></div>
+     
+     <div class="section">
+          <div class="contenedor_portafolio">
+               <h3 class="portafolio">Portafolio</h3>
+               <div class="cuadrado1"></div>
+               <div class="cuadrado2"></div>
+               <div  class="desc_portafolio1"><p class="parrafo_portafolio">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+                    <div class="contenedores_botones_portafolio">
+                         <div class="botones_portafolio">
+                              <img src="./img/Trazado 8132.jpg" alt="">
+                         </div>
+                         <div class="botones_portafolio">
+                              <img src="./img/Trazado 8133.jpg" alt="">
+                         </div>
+                    </div>
+               </div> 
+          </div>
+
+          <div class="contenedor_portafolio">
+               <div class="cuadrado3"></div>
+               <div class="cuadrado4"></div>
+               <div  class="desc_portafolio2"><p class="parrafo_portafolio1">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+                    <div class="contenedores_botones_portafolio1">
+                         <div class="botones_portafolio">
+                              <img src="./img/Trazado 8132.jpg" alt="">
+                         </div>
+                         <div class="botones_portafolio">
+                              <img src="./img/Trazado 8133.jpg" alt="">
+                         </div>
+                    </div>
+               </div> 
+          </div>
+          <div class="contenedor_portafolio">
+               <div class="cuadrado1"></div>
+               <div class="cuadrado2"></div>
+               <div  class="desc_portafolio1"><p class="parrafo_portafolio">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+                    <div class="contenedores_botones_portafolio">
+                         <div class="botones_portafolio">
+                              <img src="./img/Trazado 8132.jpg" alt="">
+                         </div>
+                         <div class="botones_portafolio">
+                              <img src="./img/Trazado 8133.jpg" alt="">
+                         </div>
+                    </div>
+               </div> 
+          </div>
+     </div>  
      
      <!--
-   
-   
-   <div class="section">
-        <h3>Portafolio</h3>
-        <div></div>
-   </div>
+
 
    <div class="section">
         <h2>Contacto</h2>
         <h3>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</h3>
         <span><p>3218828546</p></span>
         <span><p>jvilla10@outlook.es</p></span>
-   </div>-->
+   </div>
 
    
 
 <footer class="footer">
     Diseñado por Jesica Ayelen Glabor diseñadora IUX, y construido por Jorge Isaac Villa programador Frontend
-</footer>
+</footer>-->
   
 </body>
 </html>
