seccion del portafolio con las proporciones corregidas

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
      <div class="section">
           <div class="contenedor_portafolio">
                <h3 class="portafolio">Portafolio</h3>
+               <div style="height: 10.99306759098787vh;width: 100%;background-color: black;"></div>
                <div class="cuadrado1"></div>
                <div class="cuadrado2"></div>
                <div  class="desc_portafolio1"><p class="parrafo_portafolio">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
@@ -84,7 +85,7 @@
                     </div>
                </div> 
           </div>
-
+          <div style="height: 10.99306759098787vh;width: 100%;background-color: black;margin-top: 40px;"></div>
           <div class="contenedor_portafolio">
                <div class="cuadrado3"></div>
                <div class="cuadrado4"></div>
@@ -114,19 +115,13 @@
                </div> 
           </div>
      </div>  
-     
      <!--
-
-
    <div class="section">
         <h2>Contacto</h2>
         <h3>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</h3>
         <span><p>3218828546</p></span>
         <span><p>jvilla10@outlook.es</p></span>
    </div>
-
-   
-
 <footer class="footer">
     Diseñado por Jesica Ayelen Glabor diseñadora IUX, y construido por Jorge Isaac Villa programador Frontend
 </footer>-->
