proyecto al 90%, se corrigieron todos lo errores de medida. falta corregir el icono del texto de las presentaciones del portafolio, los click del canvas con las particulas, poner el lateral fijo, y enlazar los botones de acceso.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                <div  class="desc_portafolio1"><p class="parrafo_portafolio">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
                     <div class="contenedores_botones_portafolio">
                          <div class="botones_portafolio">
-                              <img src="./img/Trazado 8132.jpg" alt="">
+                              <img src="./img/Trazado 8131.png" alt="">
                          </div>
                          <div class="botones_portafolio">
                               <img src="./img/Trazado 8133.jpg" alt="">
@@ -85,7 +85,7 @@
                <div  class="desc_portafolio2"><p class="parrafo_portafolio1">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
                     <div class="contenedores_botones_portafolio1">
                          <div class="botones_portafolio">
-                              <img src="./img/Trazado 8132.jpg" alt="">
+                              <img src="./img/Trazado 8131.png" alt="">
                          </div>
                          <div class="botones_portafolio">
                               <img src="./img/Trazado 8133.jpg" alt="">
@@ -99,7 +99,7 @@
                <div  class="desc_portafolio1"><p class="parrafo_portafolio">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
                     <div class="contenedores_botones_portafolio">
                          <div class="botones_portafolio">
-                              <img src="./img/Trazado 8132.jpg" alt="">
+                              <img src="./img/Trazado 8131.png" alt="">
                          </div>
                          <div class="botones_portafolio">
                               <img src="./img/Trazado 8133.jpg" alt="">
@@ -107,17 +107,24 @@
                     </div>
                </div> 
           </div>
-</div>  
-     
+</div> 
+<div style="height: 37.27694090382387vh;width: 100%;background-color: black;"></div> 
    <div class="section2">
         <h2 class="t2_contacto">Contacto</h2>
-        <h3>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</h3>
-        <span><p>3218828546</p></span>
-        <span><p>jvilla10@outlook.es</p></span>
-   </div>
+        <h3 class="h3_t2_contacto_Section2">Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</h3>
+          <div class="span_section2">
+               <div style="margin-bottom:3.125rem;">
+                    <img src="./img/ic_phone_in_talk_24px.png" alt="">
+                    <span>3218828546</span>
+               </div>
+               <div style="margin-bottom:3.125rem;">
+                    <img src="./img/ic_mail_outline_24px.png" alt="" style="margin-left: 3.125rem;">
+                    <span>jvilla10@outlook.es</span>
+               </div>   
+          </div>       
+     </div>
 <footer class="footer">
     Diseñado por Jesica Ayelen Glabor diseñadora IUX, y construido por Jorge Isaac Villa programador Frontend
 </footer>
-  
 </body>
 </html>
