aca los enlaces de los botones dentro del mismo html, estan realizados. falta corregir el error del canvas para que imprima mas particulas, corregir la estetica de las listas, agregar el lateral estatico y las imagenes, a demas de enlazar las imagenes, y hacer la version movil para poder lanzar

--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Grupo 14423.png" type="image/x-icon">
     <title>HV JORGE ISAAC VILLA</title>
+
 </head>
 <body>
  <header class="header">
           <div class="boxName"><div class="name"><img src="./img/Grupo 14423.png" alt=""></div></div>
           <div class="boxbutton">
                <div class="boxButton1">
-                    <i>Sobre mí</i>
-                    <i>Portafolio</i>
+                    <i><a href="#sobreMi">Sobre mí</a></i>
+                    <i><a href="#portafolioExperiencia">Portafolio</a> </i>
                     <i>Experiencia</i>
                </div>
                <div class="boxButoon2">
-                    <button class="contacButton">Contáctame</button>
+                    <button class="contacButton"><a href="#contactame">Contáctame</a></button>
                </div>
           </div>
      </header>
+
 <div style="height: 31.99306759098787vh;width: 100%;background-color: black;"></div>
 <div class="canvas1">
     <div id="particles-js">
@@ -29,7 +31,7 @@
                <h2>soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
                <button class="ver_portafolio">Ver portfolio</button>
      </div>
-     <div class="section_inicial">
+     <div class="section_inicial" id="sobreMi">
 <div class="parrafo">
                <h3 class="sobre_mi">Sobre mí</h3>
                <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs.</p>
@@ -51,9 +53,13 @@
                     <li>Github</li>
                </div>
                <div class="li1">
-                    <li>VisualStudio</li>
-                    <li>Netbeans</li>
-               </div>    
+                    <li>Excel</li>
+                    <li>Autocad</li>
+               </div>
+               <div class="li1">
+                    <li>Sketchup</li>
+                    <li>Solidword</li>
+               </div>      
           </div>
 </div>
           <div class="photo"></div>
@@ -61,9 +67,9 @@
                     <script src="js/particles.min.js"></script>
                     <script src="js/particlesjs-config.json"></script>
 </div>
-<div class="section">
-         <div class="contenedor_portafolio">
-               <h3 class="portafolio">Portafolio</h3>
+<div class="section" ><div style="height: 30vh;width: 100%;background-color: black;" id="portafolioExperiencia"></div>
+         <div class="contenedor_portafolio" >
+               <h3 class="portafolio" >Portafolio</h3>
                <div style="height: 10.99306759098787vh;width: 100%;background-color: black;"></div>
                <div class="cuadrado1"></div>
                <div class="cuadrado2"></div>
@@ -109,7 +115,7 @@
           </div>
 </div> 
 <div style="height: 37.27694090382387vh;width: 100%;background-color: black;"></div> 
-   <div class="section2">
+   <div class="section2" id="contactame">
         <h2 class="t2_contacto">Contacto</h2>
         <h3 class="h3_t2_contacto_Section2">Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</h3>
           <div class="span_section2">
