--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
                <div class="name_image"></div>
           </div>
      </div>
-
-
-
- 
     <div class="icono-menu">
-          <img src="./img/align justify.png" id="icono-menu">
+          <img src="./img/open-menu.png" id="icono-menu">
      </div>
      <div class="cont-menu active" id="menu">
           <ul>
@@ -42,12 +38,12 @@
 
 </header>
 <header class="header2"></header>
-<div class="presentacion">
+<section class="presentacion">
      <h1>Hola,</h1>
      <h2 class="text_presentacion">soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
      <button class="ver_portafolio">Ver portfolio</button>
-</div>
-<div class="sobre_mi_presentacion">
+</section>
+<section class="sobre_mi_presentacion">
      <div class="presentacion1">
           <h3 class="sobre_mi">Sobre mí</h3>
           <div class="mi_imagen"></div>
@@ -79,8 +75,57 @@
           <li>Solidword</li>
      </div>      
 </div>
-</div>
-<div></div>
+</section>
+<section class="portafolio">
+     <h3 class="sobre_mi">Portfolio</h3>
+     <div class="portafolio_izquierda">
+          <div class="cuadrado_tramsparente">
+               <div class="cuadrado_gris"></div>
+          </div>
+          <div class="imagen_web_portafolio"></div>
+          <div class="imagen_web_Codigo"></div>
+     </div>
+     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+     <div>
+          <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
+          <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
+     </div>
+     <div class="portafolio_derecha">
+          <div class="cuadrado_tramsparente2">
+               <div class="cuadrado_gris"></div>
+          </div>
+          <div class="imagen_web_portafolio2"></div>
+          <div class="imagen_web_Codigo2"></div>
+     </div>
+     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+     <div>
+          <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
+          <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
+     </div>
+     <div class="portafolio_izquierda">
+          <div class="cuadrado_tramsparente">
+               <div class="cuadrado_gris"></div>
+          </div>
+          <div class="imagen_web_portafolio"></div>
+          <div class="imagen_web_Codigo"></div>
+     </div>
+     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+     <div>
+          <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
+          <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
+     </div>
+</section>
+<section class="contactame">
+     <h3 class="sobre_mi" style="padding-bottom: 5%;">Contacto</h3>
+     <p>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</p>
+     <div style="margin-top: 15%; padding-bottom:35%">
+          <img src="./img/ic_phone_in_talk_24px.png" alt="" style="margin-left: 10%;">
+          <strong>3218828546</strong>
+          <img src="./img/ic_mail_outline_24px.png" alt="">
+          <strong>jvilla10@outlook.es</strong>
+     </div>
+     <footer>Diseñado y construido por Jorge Isaac Villa</footer>
+</section>
 
      
 </body>
