fondo dinamico agregado

--- a/index.html
+++ b/index.html
@@ -28,16 +28,11 @@
           </ul>
      </div>
      <script src="./js/app.js"></script>
-
-
-
-
-
-
-
-
 </header>
 <header class="header2"></header>
+<div id="particles-js"></div>
+     <script src="js/particles.min.js"></script>
+     <script src="js/particlesjs-config.json"></script>
 <section class="presentacion">
      <h1>Hola,</h1>
      <h2 class="text_presentacion">soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
@@ -126,7 +121,5 @@
      </div>
      <footer>Diseñado y construido por Jorge Isaac Villa</footer>
 </section>
-
-     
 </body>
 </html>
