--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
      </div>
      <div class="cont-menu active" id="menu">
           <ul>
-               <li>Sobre mí</li>
-               <li>Portafolio</li>
+               <li><a href="#sobreMi">Sobre mí</a></li>
+               <li><a href="#portafolioExperiencia">Portafolio</a></li>
                <li>Experiencia</li>
-               <li>Contáctame</li>
+               <li><a href="#contactame">Contáctame</a></li>
                <li>Descargar currículum</li>
           </ul>
      </div>
@@ -40,7 +40,7 @@
 </section>
 <section class="sobre_mi_presentacion">
      <div class="presentacion1">
-          <h3 class="sobre_mi">Sobre mí</h3>
+          <h3 class="sobre_mi" id="sobreMi">Sobre mí</h3>
           <div class="mi_imagen"></div>
      </div>
      <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs.</p>
@@ -72,7 +72,7 @@
 </div>
 </section>
 <section class="portafolio">
-     <h3 class="sobre_mi">Portfolio</h3>
+     <h3 class="sobre_mi" id="portafolioExperiencia">Portfolio</h3>
      <div class="portafolio_izquierda">
           <div class="cuadrado_tramsparente">
                <div class="cuadrado_gris"></div>
@@ -110,7 +110,7 @@
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
      </div>
 </section>
-<section class="contactame">
+<section class="contactame" id="contactame">
      <h3 class="sobre_mi" style="padding-bottom: 5%;">Contacto</h3>
      <p>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</p>
      <div style="margin-top: 15%; padding-bottom:35%">
