--- a/index.html
+++ b/index.html
@@ -22,13 +22,27 @@
           <ul>
                <li><a href="#sobreMi">Sobre mí</a></li>
                <li><a href="#portafolioExperiencia">Portafolio</a></li>
-               <li>Experiencia</li>
+               <li><a href="javascript:abrir()"> Experiencia</a></li>
                <li><a href="#contactame">Contáctame</a></li>
-               <li>Descargar currículum</li>
+               <li><a href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
           </ul>
      </div>
      <script src="./js/app.js"></script>
 </header>
+
+
+<div class="ventana_flotante" id="vent_fotante">
+     <img src="./img/akirambow-spoiled-rabbit.gif" alt="" style="height:11rem ;width:7rem;">
+     <p>¡Tú serás mi primera experiencia!</p> 
+</div>
+<script>
+     function abrir(){
+         var vent_flotante = document.getElementById("vent_flotante");vent_flotante.style.display ="block"
+     }
+</script>
+
+
+
 <header class="header2"></header>
 <div id="particles-js"></div>
      <script src="js/particles.min.js"></script>
@@ -36,7 +50,7 @@
 <section class="presentacion">
      <h1>Hola,</h1>
      <h2 class="text_presentacion">soy Jorge Villa y brindo soluciones como Frontend Developer.</h2>
-     <button class="ver_portafolio">Ver portfolio</button>
+     <button class="ver_portafolio"><a href="#portafolioExperiencia" class="ver_portafolio_Enlace">Ver portfolio</a></button>
 </section>
 <section class="sobre_mi_presentacion">
      <div class="presentacion1">
@@ -80,7 +94,7 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+     <p>#PÁGINA WEB EN PRODUCCIÓN</p>
      <div>
           <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
@@ -92,7 +106,7 @@
           <div class="imagen_web_portafolio2"></div>
           <div class="imagen_web_Codigo2"></div>
      </div>
-     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+     <p>#PÁGINA WEB EN PRODUCCIÓN</p>
      <div>
           <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
@@ -104,7 +118,7 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs</p>
+     <p>S#PÁGINA WEB EN PRODUCCIÓN</p>
      <div>
           <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
@@ -113,11 +127,15 @@
 <section class="contactame" id="contactame">
      <h3 class="sobre_mi" style="padding-bottom: 5%;">Contacto</h3>
      <p>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</p>
-     <div style="margin-top: 15%; padding-bottom:35%">
-          <img src="./img/ic_phone_in_talk_24px.png" alt="" style="margin-left: 10%;">
-          <strong>3218828546</strong>
-          <img src="./img/ic_mail_outline_24px.png" alt="">
-          <strong>jvilla10@outlook.es</strong>
+     <div class="informacion_personal" style="margin-top: 15%; padding-bottom:35%">
+          <div class="strongs">
+               <img src="./img/ic_phone_in_talk_24px.png" alt="" style="margin-left: 10%;">
+               <strong>(+57) 3218828546</strong>
+          </div>
+          <div class="strongs">
+               <img src="./img/ic_mail_outline_24px.png" alt="" style="margin-left: 10%;">
+               <strong>jvilla10@outlook.es</strong>
+          </div>
      </div>
      <footer>Diseñado y construido por Jorge Isaac Villa</footer>
 </section>
