se realizo la parte responsive para PC de la seccion 1, y 2, se dispuso header para version PC y tablet, menos las opciones del header. version tablet/PC 30%

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <script src="./js/app.js"></script>
 </header>
 
-
+<!--INICIO - VENTANA FLOTANTE, TU SERAS MI PRIMERA ESPERIENCIA-->
 <div class="ventana_flotante" id="vent_fotante">
      <img src="./img/akirambow-spoiled-rabbit.gif" alt="" style="height:11rem ;width:7rem;">
      <p>¡Tú serás mi primera experiencia!</p> 
@@ -40,8 +40,7 @@
          var vent_flotante = document.getElementById("vent_flotante");vent_flotante.style.display ="block"
      }
 </script>
-
-
+<!--FIN - VENTANA FLOTANTE, TU SERAS MI PRIMERA ESPERIENCIA-->
 
 <header class="header2"></header>
 <div id="particles-js"></div>
@@ -57,36 +56,38 @@
           <h3 class="sobre_mi" id="sobreMi">Sobre mí</h3>
           <div class="mi_imagen"></div>
      </div>
-     <p>Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs.</p>
+     <div class="textos_parrafos">
+          <p class="history">Soy ingeniero eléctrico especializado en diseño de infraestructura y automatización industrial, y ahora mismo de forma disruptiva, me he adentrado en la era digital como Front-end Developer brindando soluciones webs.</p>
      
-     <p>Actualmente mi enfoque es utilizar todos mis conocimientos adquiridos y herramientas con el fin de aprovechar las ventajas que da la tecnología para mejorar productos, servicios, sistemas, rutinas de trabajo, automatizar procesos con sentido estético e intuitivo para brindar una mejor experiencia de usuario.</p>
+          <p class="history">Actualmente mi enfoque es utilizar todos mis conocimientos adquiridos y herramientas con el fin de aprovechar las ventajas que da la tecnología para mejorar productos, servicios, sistemas, rutinas de trabajo, automatizar procesos con sentido estético e intuitivo para brindar una mejor experiencia de usuario.</p>
 
-     <p>Las tecnologías con las que he trabajo son las siguientes:</p>       
-<div class="lista">
-     <div class="li1">
-          <li>JavaScript</li>
-          <li>CSS</li>
+          <p class="history">Las tecnologías con las que he trabajo son las siguientes:</p>       
+          <div class="lista">
+               <div class="li1">
+                    <li>JavaScript</li>
+                    <li>CSS</li>
+               </div>
+               <div class="li1">
+                    <li>HTML</li>
+                    <li>Angular</li>
+               </div>
+               <div class="li1">
+                    <li>Git</li>
+                    <li>Github</li>
+               </div>
+               <div class="li1">
+                    <li>Excel</li>
+                    <li>Autocad</li>
+               </div>
+               <div class="li1">
+                    <li>Sketchup</li>
+                    <li>Solidword</li>
+               </div>      
+          </div>
      </div>
-     <div class="li1">
-          <li>HTML</li>
-          <li>Angular</li>
-     </div>
-     <div class="li1">
-          <li>Git</li>
-          <li>Github</li>
-     </div>
-     <div class="li1">
-          <li>Excel</li>
-          <li>Autocad</li>
-     </div>
-     <div class="li1">
-          <li>Sketchup</li>
-          <li>Solidword</li>
-     </div>      
-</div>
 </section>
 <section class="portafolio">
-     <h3 class="sobre_mi" id="portafolioExperiencia">Portfolio</h3>
+     <h3 class="sobre_mi_portafolio" id="portafolioExperiencia">Portfolio</h3>
      <div class="portafolio_izquierda">
           <div class="cuadrado_tramsparente">
                <div class="cuadrado_gris"></div>
@@ -118,7 +119,7 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p>S#PÁGINA WEB EN PRODUCCIÓN</p>
+     <p>#PÁGINA WEB EN PRODUCCIÓN</p>
      <div>
           <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
