--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      </div>
 </section>
 <section class="portafolio">
-     <h3 class="sobre_mi_portafolio" id="portafolioExperiencia">Portfolio</h3>
+     <h3 class="sobre_mi_portafolio" id="portafolioExperiencia">Portafolio</h3>
      <div class="portafolio_izquierda">
           <div class="cuadrado_tramsparente">
                <div class="cuadrado_gris"></div>
@@ -95,7 +95,7 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p>#PÁGINA WEB EN PRODUCCIÓN</p>
+     <p class="text_portafolio_derecho">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet nesciunt nobis ducimus animi quisquam perspiciatis aliquid assumenda quaerat, maxime molestiae inventore temporibus id modi numquam mollitia voluptatem! Vel, corporis? /*#PÁGINA WEB EN PRODUCCIÓN*/</p>
      <div>
           <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
@@ -107,10 +107,12 @@
           <div class="imagen_web_portafolio2"></div>
           <div class="imagen_web_Codigo2"></div>
      </div>
-     <p>#PÁGINA WEB EN PRODUCCIÓN</p>
-     <div>
-          <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
-          <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
+     <div class="text_portafolio_izquierdo">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam expedita nemo ab? Cum hic, cupiditate eligendi harum laboriosam facilis ipsum laborum sequi. Nostrum, nisi iste voluptates velit repudiandae suscipit. Eos! #PÁGINA WEB EN PRODUCCIÓN</p>
+          <div>
+               <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
+               <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
+          </div>
      </div>
      <div class="portafolio_izquierda">
           <div class="cuadrado_tramsparente">
@@ -119,7 +121,7 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p>#PÁGINA WEB EN PRODUCCIÓN</p>
+     <p class="text_portafolio_derecho">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo atque quibusdam sapiente quaerat distinctio dolore recusandae tempora cupiditate quam soluta quisquam quidem laudantium eveniet numquam architecto sunt sit, corporis iusto? #PÁGINA WEB EN PRODUCCIÓN</p>
      <div>
           <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
           <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
