pagina web responsive al 80%, falta quitar el estilo a los botones del header, falta arreglar la información de los datos personales, y mejorar el formato para tablets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <li><a href="#portafolioExperiencia">Portafolio</a></li>
                <li><a href="javascript:abrir()"> Experiencia</a></li>
                <li><a href="#contactame">Contáctame</a></li>
-               <li><a href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
+               <li><a  class="descargar_curriculum_header" href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
           </ul>
      </div>
      <script src="./js/app.js"></script>
@@ -95,10 +95,12 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p class="text_portafolio_derecho">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet nesciunt nobis ducimus animi quisquam perspiciatis aliquid assumenda quaerat, maxime molestiae inventore temporibus id modi numquam mollitia voluptatem! Vel, corporis? /*#PÁGINA WEB EN PRODUCCIÓN*/</p>
-     <div>
-          <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
-          <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
+     <div class="text_portafolio_derecho">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet nesciunt nobis ducimus animi quisquam perspiciatis aliquid assumenda quaerat, maxime molestiae inventore temporibus id modi numquam mollitia voluptatem! Vel, corporis? /*#PÁGINA WEB EN PRODUCCIÓN*/</p>
+          <div class="image_portafolio_boton">
+               <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;" class="image_boton1">
+               <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;" class="image_boton2">
+          </div>
      </div>
      <div class="portafolio_derecha">
           <div class="cuadrado_tramsparente2">
@@ -121,25 +123,29 @@
           <div class="imagen_web_portafolio"></div>
           <div class="imagen_web_Codigo"></div>
      </div>
-     <p class="text_portafolio_derecho">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo atque quibusdam sapiente quaerat distinctio dolore recusandae tempora cupiditate quam soluta quisquam quidem laudantium eveniet numquam architecto sunt sit, corporis iusto? #PÁGINA WEB EN PRODUCCIÓN</p>
-     <div>
-          <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
-          <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
-     </div>
+     <div class="text_portafolio_derecho">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet nesciunt nobis ducimus animi quisquam perspiciatis aliquid assumenda quaerat, maxime molestiae inventore temporibus id modi numquam mollitia voluptatem! Vel, corporis? /*#PÁGINA WEB EN PRODUCCIÓN*/</p>
+          <div class="image_portafolio_boton">
+               <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;" class="image_boton1">
+               <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;" class="image_boton2">
+          </div>
 </section>
 <section class="contactame" id="contactame">
-     <h3 class="sobre_mi" style="padding-bottom: 5%;">Contacto</h3>
-     <p>Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</p>
+     <h3 class="sobre_mi">Contacto</h3>
+     <p class="texto_contactame">Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</p>
      <div class="informacion_personal" style="margin-top: 15%; padding-bottom:35%">
           <div class="strongs">
                <img src="./img/ic_phone_in_talk_24px.png" alt="" style="margin-left: 10%;">
                <strong>(+57) 3218828546</strong>
           </div>
+          <li class="boton_Descargar_curriculum"><a href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
           <div class="strongs">
                <img src="./img/ic_mail_outline_24px.png" alt="" style="margin-left: 10%;">
                <strong>jvilla10@outlook.es</strong>
           </div>
+
      </div>
+     
      <footer>Diseñado y construido por Jorge Isaac Villa</footer>
 </section>
 </body>
