pagina web completada al 97%, faltan detalles de letras de parrafos, ventana emergente: tu seras mi primera experiencia, y arreglar detalles de titulos para versiones tablet. realizar pruebas, para ver si es apta para montar en la red.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
      </div>
      <div class="cont-menu active" id="menu">
           <ul>
-               <li><a href="#sobreMi">Sobre mí</a></li>
+               <li class="sobre_mi_li"><a href="#sobreMi">Sobre mí</a></li>
                <li><a href="#portafolioExperiencia">Portafolio</a></li>
                <li><a href="javascript:abrir()"> Experiencia</a></li>
-               <li><a href="#contactame">Contáctame</a></li>
+               <li><a class="boton_contactame_header" href="#contactame">Contáctame</a></li>
                <li><a  class="descargar_curriculum_header" href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
           </ul>
      </div>
@@ -96,7 +96,7 @@
           <div class="imagen_web_Codigo"></div>
      </div>
      <div class="text_portafolio_derecho">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet nesciunt nobis ducimus animi quisquam perspiciatis aliquid assumenda quaerat, maxime molestiae inventore temporibus id modi numquam mollitia voluptatem! Vel, corporis? /*#PÁGINA WEB EN PRODUCCIÓN*/</p>
+          <p>#PÁGINA WEB EN PRODUCCIÓN</p>
           <div class="image_portafolio_boton">
                <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;" class="image_boton1">
                <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;" class="image_boton2">
@@ -110,7 +110,7 @@
           <div class="imagen_web_Codigo2"></div>
      </div>
      <div class="text_portafolio_izquierdo">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam expedita nemo ab? Cum hic, cupiditate eligendi harum laboriosam facilis ipsum laborum sequi. Nostrum, nisi iste voluptates velit repudiandae suscipit. Eos! #PÁGINA WEB EN PRODUCCIÓN</p>
+          <p>#PÁGINA WEB EN PRODUCCIÓN</p>
           <div>
                <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;">
                <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;">
@@ -124,28 +124,28 @@
           <div class="imagen_web_Codigo"></div>
      </div>
      <div class="text_portafolio_derecho">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet nesciunt nobis ducimus animi quisquam perspiciatis aliquid assumenda quaerat, maxime molestiae inventore temporibus id modi numquam mollitia voluptatem! Vel, corporis? /*#PÁGINA WEB EN PRODUCCIÓN*/</p>
+          <p>#PÁGINA WEB EN PRODUCCIÓN*/</p>
           <div class="image_portafolio_boton">
                <img src="./img/Trazado 8131.png" alt="" style="margin-left: 10%;" class="image_boton1">
                <img src="./img/Trazado 8141.png" alt="" style="margin-left: 3%;" class="image_boton2">
           </div>
 </section>
 <section class="contactame" id="contactame">
-     <h3 class="sobre_mi">Contacto</h3>
+     <h3 class="titulo_contacto">Contacto</h3>
      <p class="texto_contactame">Estoy en busca de nuevas oportunidades, desafíos y retos, me apasiona aprender y descubrir nuevas formas de tecnología. ¡Estoy entusiasmado por comenzar a trabajar en tu proyecto!</p>
-     <div class="informacion_personal" style="margin-top: 15%; padding-bottom:35%">
+     <div class="informacion_personal">
+          <li class="boton_Descargar_curriculum"><a href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
+     <div class="strongs-canva">
           <div class="strongs">
                <img src="./img/ic_phone_in_talk_24px.png" alt="" style="margin-left: 10%;">
                <strong>(+57) 3218828546</strong>
           </div>
-          <li class="boton_Descargar_curriculum"><a href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
           <div class="strongs">
                <img src="./img/ic_mail_outline_24px.png" alt="" style="margin-left: 10%;">
                <strong>jvilla10@outlook.es</strong>
           </div>
-
      </div>
-     
+     </div>
      <footer>Diseñado y construido por Jorge Isaac Villa</footer>
 </section>
 </body>
