actualizacion nuevas tecnologias estudiadas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul>
                <li class="sobre_mi_li"><a href="#sobreMi">Sobre mí</a></li>
                <li><a href="#portafolioExperiencia">Portafolio</a></li>
-               <li><a href="javascript:abrir()"> Experiencia</a></li>
+           <!--<li><a href="javascript:abrir()"> Experiencia</a></li>-->
                <li><a class="boton_contactame_header" href="#contactame">Contáctame</a></li>
                <li><a  class="descargar_curriculum_header" href="./data_web/HV_PROGRAMACION(Jorge Isaac).pdf">Descargar currículum</a></li>
           </ul>
@@ -30,8 +30,9 @@
      <script src="./js/app.js"></script>
 </header>
 
+
 <!--INICIO - VENTANA FLOTANTE, TU SERAS MI PRIMERA ESPERIENCIA-->
-<div class="ventana_flotante" id="vent_fotante">
+<!--<div class="ventana_flotante" id="vent_fotante">
      <img src="./img/akirambow-spoiled-rabbit.gif" alt="" style="height:11rem ;width:7rem;">
      <p>¡Tú serás mi primera experiencia!</p> 
 </div>
@@ -39,7 +40,7 @@
      function abrir(){
          var vent_flotante = document.getElementById("vent_flotante");vent_flotante.style.display ="block"
      }
-</script>
+</script>-->
 <!--FIN - VENTANA FLOTANTE, TU SERAS MI PRIMERA ESPERIENCIA-->
 
 <header class="header2"></header>
@@ -82,7 +83,11 @@
                <div class="li1">
                     <li>Sketchup</li>
                     <li>Solidword</li>
-               </div>      
+               </div>
+               <div class="li1">
+                    <li>React</li>
+                    <li>Effect House</li>
+               </div>        
           </div>
      </div>
 </section>
